--- a/friends.html
+++ b/friends.html
@@ -22,6 +22,15 @@
         </div>
     </div>
 
+    <header class="screen-header">
+        <h1 class="screen-header__title">Friends</h1>
+        <div class="screen-header__icons">
+            <span><i class="fas fa-search fa-2x"></i></span>
+            <span><i class="fa-solid fa-music fa-2x"></i></span>
+            <span><i class="fa-solid fa-gear fa-2x"></i></span>
+        </div>
+    </header>
+    
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn"><a class="nav__link" href="friends.html"><i class="fa-solid fa-user fa-2x"></i></a></li>
