User Component part One

--- a/friends.html
+++ b/friends.html
@@ -35,6 +35,17 @@
         <i class="fa-solid fa-circle-info"></i> Friends' Names Display <i class="fa-solid fa-chevron-right fa-xs"></i>
     </a>
 
+    <div class="user-component">
+        <div class="user-component__column">
+            <img class="user-component__avatar" src="https://i.namu.wiki/i/3IX1N8BBsg00le6CzsHd3s0Pg7rgrXt-U2BzYSpe4T-gK6Of3SukXJSCywMMf00XSMeyKNmIqp3RaoCvqUs5KHdxJrIRMtVArTwrFQUkQgHOF38pK_6xr6X3fhfwaXQdMWSCNYEmrY-af8zjGAZm_g.webp" />
+            <div class="user-component__text">
+                <h4 class="user-component__title">Moongchi</h4>
+                <h6 class="user-component__subtitle">this text whatever</h6>
+            </div>
+        </div>
+        <div class="user-component__column"></div>
+    </div>
+
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn"><a class="nav__link" href="friends.html"><i class="fa-solid fa-user fa-2x"></i></a></li>
