--- a/friends.html
+++ b/friends.html
@@ -52,7 +52,7 @@
                 <div class="user-component__column">
                     <img class="user-component__avatar user-component__avatar--sm" src="https://i.namu.wiki/i/3IX1N8BBsg00le6CzsHd3s0Pg7rgrXt-U2BzYSpe4T-gK6Of3SukXJSCywMMf00XSMeyKNmIqp3RaoCvqUs5KHdxJrIRMtVArTwrFQUkQgHOF38pK_6xr6X3fhfwaXQdMWSCNYEmrY-af8zjGAZm_g.webp" />
                     <div class="user-component__text">
-                        <h4 class="user-component__title">Channel</h4>
+                        <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
                     </div>
                 </div>
                 <div class="user-component__column"><span>2</span><i class="fa-solid fa-chevron-right"></i></div>
