--- a/chats.html
+++ b/chats.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Friends - Kokoa Clone</title>
+    <title>Chats - Kokoa Clone</title>
 </head>
 <body>
     <div class="status-bar">
@@ -23,48 +23,33 @@
     </div>
 
     <header class="screen-header">
-        <h1 class="screen-header__title">Friends</h1>
+        <h1 class="screen-header__title">Chats</h1>
         <div class="screen-header__icons">
             <span><i class="fas fa-search fa-2x"></i></span>
+            <span><i class="fa-regular fa-comment-dots fa-2x"></i></span>
             <span><i class="fa-solid fa-music fa-2x"></i></span>
             <span><i class="fa-solid fa-gear fa-2x"></i></span>
         </div>
     </header>
     
-    <a id="friends-display-link">
-        <i class="fa-solid fa-circle-info"></i> Friends' Names Display <i class="fa-solid fa-chevron-right fa-xs"></i>
-    </a>
-
     <main class="main-screen">
         <div class="user-component">
             <div class="user-component__column">
-                <img class="user-component__avatar user-component__avatar--xl" src="https://i.namu.wiki/i/3IX1N8BBsg00le6CzsHd3s0Pg7rgrXt-U2BzYSpe4T-gK6Of3SukXJSCywMMf00XSMeyKNmIqp3RaoCvqUs5KHdxJrIRMtVArTwrFQUkQgHOF38pK_6xr6X3fhfwaXQdMWSCNYEmrY-af8zjGAZm_g.webp" />
+                <img class="user-component__avatar" src="https://i.namu.wiki/i/3IX1N8BBsg00le6CzsHd3s0Pg7rgrXt-U2BzYSpe4T-gK6Of3SukXJSCywMMf00XSMeyKNmIqp3RaoCvqUs5KHdxJrIRMtVArTwrFQUkQgHOF38pK_6xr6X3fhfwaXQdMWSCNYEmrY-af8zjGAZm_g.webp" />
                 <div class="user-component__text">
                     <h4 class="user-component__title">Moongchi</h4>
-                    <!-- <h6 class="user-component__subtitle">this text whatever</h6>. -->
+                    <h6 class="user-component__subtitle">Please check my Kokoa Account Info</h6>
                 </div>
             </div>
             <div class="user-component__column"></div>
-        </div>
-        <div class="friends-screen__channel">
-            <div class="friends-screen__channel-header"><span>Channel</span><i class="fa-solid fa-chevron-up fa-xs"></i></div>
-            <div class="user-component">
-                <div class="user-component__column">
-                    <img class="user-component__avatar user-component__avatar--sm" src="https://i.namu.wiki/i/3IX1N8BBsg00le6CzsHd3s0Pg7rgrXt-U2BzYSpe4T-gK6Of3SukXJSCywMMf00XSMeyKNmIqp3RaoCvqUs5KHdxJrIRMtVArTwrFQUkQgHOF38pK_6xr6X3fhfwaXQdMWSCNYEmrY-af8zjGAZm_g.webp" />
-                    <div class="user-component__text">
-                        <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
-                    </div>
-                </div>
-                <div class="user-component__column"><span>2</span><i class="fa-solid fa-chevron-right"></i></div>
-            </div>
         </div>
     </main>
 
 
     <nav class="nav">
         <ul class="nav__list">
-            <li class="nav__btn"><a class="nav__link" href="friends.html"><i class="fa-solid fa-user fa-2x"></i></a></li>
-            <li class="nav__btn"><a class="nav__link" href="chats.html"><span class="nav__notification">1</span><i class="fa-regular fa-comment fa-2x"></i></a></li>
+            <li class="nav__btn"><a class="nav__link" href="friends.html"><i class="fa-regular fa-user fa-2x"></i></a></li>
+            <li class="nav__btn"><a class="nav__link" href="chats.html"><span class="nav__notification">1</span><i class="fa-solid fa-comment fa-2x"></i></a></li>
             <li class="nav__btn"><a class="nav__link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a></li>
             <li class="nav__btn"><a class="nav__link" href="more.html"><span class="ellipsis__notification"> </span><i class="fa-solid fa-ellipsis fa-2x"></i></a></li>
         </ul>
