--- a/chats.html
+++ b/chats.html
@@ -41,7 +41,10 @@
                     <h6 class="user-component__subtitle">Please check my Kokoa Account Info</h6>
                 </div>
             </div>
-            <div class="user-component__column"></div>
+            <div class="user-component__column">
+                <span class="user-component__time">21:22</span>
+                <div class="badge">1</div>
+            </div>
         </div>
     </main>
 
@@ -49,7 +52,7 @@
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn"><a class="nav__link" href="friends.html"><i class="fa-regular fa-user fa-2x"></i></a></li>
-            <li class="nav__btn"><a class="nav__link" href="chats.html"><span class="nav__notification">1</span><i class="fa-solid fa-comment fa-2x"></i></a></li>
+            <li class="nav__btn"><a class="nav__link" href="chats.html"><span class="nav__notification badge">1</span><i class="fa-solid fa-comment fa-2x"></i></a></li>
             <li class="nav__btn"><a class="nav__link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a></li>
             <li class="nav__btn"><a class="nav__link" href="more.html"><span class="ellipsis__notification"> </span><i class="fa-solid fa-ellipsis fa-2x"></i></a></li>
         </ul>
