--- a/friends.html
+++ b/friends.html
@@ -55,7 +55,11 @@
                         <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
                     </div>
                 </div>
-                <div class="user-component__column"><span>2</span><i class="fa-solid fa-chevron-right"></i></div>
+                <div class="user-component__column">
+                    <div>
+                        <span>2</span><i class="fa-solid fa-chevron-right"></i>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
@@ -64,7 +68,7 @@
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn"><a class="nav__link" href="friends.html"><i class="fa-solid fa-user fa-2x"></i></a></li>
-            <li class="nav__btn"><a class="nav__link" href="chats.html"><span class="nav__notification">1</span><i class="fa-regular fa-comment fa-2x"></i></a></li>
+            <li class="nav__btn"><a class="nav__link" href="chats.html"><span class="nav__notification badge">1</span><i class="fa-regular fa-comment fa-2x"></i></a></li>
             <li class="nav__btn"><a class="nav__link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a></li>
             <li class="nav__btn"><a class="nav__link" href="more.html"><span class="ellipsis__notification"> </span><i class="fa-solid fa-ellipsis fa-2x"></i></a></li>
         </ul>
