--- a/chats.html
+++ b/chats.html
@@ -46,15 +46,27 @@
                 <div class="badge">1</div>
             </div>
         </div>
+        <div class="user-component">
+            <div class="user-component__column">
+                <img class="user-component__avatar" src="https://i.namu.wiki/i/3IX1N8BBsg00le6CzsHd3s0Pg7rgrXt-U2BzYSpe4T-gK6Of3SukXJSCywMMf00XSMeyKNmIqp3RaoCvqUs5KHdxJrIRMtVArTwrFQUkQgHOF38pK_6xr6X3fhfwaXQdMWSCNYEmrY-af8zjGAZm_g.webp" />
+                <div class="user-component__text">
+                    <h4 class="user-component__title">Moongchi</h4>
+                    <h6 class="user-component__subtitle">Please check my Kokoa Account Info</h6>
+                </div>
+            </div>
+            <div class="user-component__column">
+                <span class="user-component__time">21:22</span>
+                <div class="badge">1</div>
+            </div>
+        </div>
     </main>
-
 
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn"><a class="nav__link" href="friends.html"><i class="fa-regular fa-user fa-2x"></i></a></li>
             <li class="nav__btn"><a class="nav__link" href="chats.html"><span class="nav__notification badge">1</span><i class="fa-solid fa-comment fa-2x"></i></a></li>
             <li class="nav__btn"><a class="nav__link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a></li>
-            <li class="nav__btn"><a class="nav__link" href="more.html"><span class="ellipsis__notification"> </span><i class="fa-solid fa-ellipsis fa-2x"></i></a></li>
+            <li class="nav__btn"><a class="nav__link" href="more.html"><span class="ellipsis__notification small-badge"> </span><i class="fa-solid fa-ellipsis fa-2x"></i></a></li>
         </ul>
     </nav>
     
