--- a/find.html
+++ b/find.html
@@ -41,6 +41,25 @@
             <h6 class="recommended-friends__title">Recommended Friends</h6>
             <span> You have no recommended friends.</span>
         </div>
+        <div class="open-chat">
+            <div class="open-chat__header">
+                <h4>Open Chat</h4>
+                <Span>Go to Openchat Home<i class="fa-solid fa-chevron-right"></i></Span>
+            </div>
+            <div class="open-chat__post">
+                <div class="open-chat__post-column">
+                    <h5 class="open-chat__post-column__title">#BTS</h5>
+                    <h6 class="open-chat__post-column__hashtags">#bts#army#friends</h6>
+                    <div class="open-chat__post-column__members">
+                        <img src="https://i.namu.wiki/i/CBxfRQ_cbgnO3LvFtv4XB3cP1qLyNwb_nqH8GLaQYAeqGPwr_8dLIaOJ4uLt1UxjIGcxhhaF_dQhKu8j4FWRYy6t11FUFHeMG0gj_j6K_laIqtp51OMgCM2dYCszezBM3vjrZCRT7hkgUdaTQSyezA.webp" />
+                        <span class="open-chat__post-column__members__count">802 members</span>
+                        <div class="divider"></div>
+                        <span class="open-chat__post-column__members__status">Active</span>
+                    </div>
+                </div>
+                <div class="open-chat__post-column"></div>
+            </div>
+        </div>
     </main>
 
 
