Find Screen Part Four

--- a/find.html
+++ b/find.html
@@ -57,7 +57,14 @@
                         <span class="open-chat__post-column__members__status">Active</span>
                     </div>
                 </div>
-                <div class="open-chat__post-column"></div>
+                <div class="open-chat__post-column">
+                    <div class="open-chat__post-column__photo">
+                        <img src="https://i.namu.wiki/i/detE7nSeyLNT2GPvsRqwFXBoyf6nQr6Ikl7PoL65OiDc5MDz7yHHGpw3o6LHuIaHYx2prgt0kijfkXA2ScjT8z4tj9aQHOv3v45M_RdGP8EqHbzlj6Gnj1vhIauKsNQ2VlaaVsccn6l3f0eFWhfASA.webp" />
+                        <div class="open-chat__post-column__heart-count">
+                            <i class="fa-solid fa-heart"></i> <span>326</span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
