--- a/more.html
+++ b/more.html
@@ -27,7 +27,7 @@
         <div class="screen-header__icons">
             <span><i class="fas fa-search fa-2x"></i></span>
             <span><i class="fa-solid fa-music fa-2x"></i></span>
-            <span><i class="fa-solid fa-gear fa-2x"></i></span>
+            <span><a href="settings.html"><i class="fa-solid fa-gear fa-2x"></i></a></span>
         </div>
     </header>
     
@@ -53,6 +53,12 @@
         <div class="more-suggestions">
             <h4 class="more-suggestions__title">Suggestions</h4>
             <div class="more-suggestions__icons">
+                <div class="more-suggestions__icon">
+                    <div class="more-suggestions__icon-image">
+                        <i class="fa-solid fa-quote-right"></i>
+                    </div>
+                    <span class="more-suggestions__icon-text">Kokoa Story</span>
+                </div>
                 <div class="more-suggestions__icon">
                     <div class="more-suggestions__icon-image">
                         <i class="fa-solid fa-quote-right"></i>
