Settings and Chat Screen part One

--- a/chats.html
+++ b/chats.html
@@ -33,19 +33,21 @@
     </header>
     
     <main class="main-screen">
-        <div class="user-component">
-            <div class="user-component__column">
-                <img class="user-component__avatar" src="https://i.namu.wiki/i/3IX1N8BBsg00le6CzsHd3s0Pg7rgrXt-U2BzYSpe4T-gK6Of3SukXJSCywMMf00XSMeyKNmIqp3RaoCvqUs5KHdxJrIRMtVArTwrFQUkQgHOF38pK_6xr6X3fhfwaXQdMWSCNYEmrY-af8zjGAZm_g.webp" />
-                <div class="user-component__text">
-                    <h4 class="user-component__title">Moongchi</h4>
-                    <h6 class="user-component__subtitle">Please check my Kokoa Account Info</h6>
+        <a href="chat.html">
+            <div class="user-component">
+                <div class="user-component__column">
+                    <img class="user-component__avatar" src="https://i.namu.wiki/i/3IX1N8BBsg00le6CzsHd3s0Pg7rgrXt-U2BzYSpe4T-gK6Of3SukXJSCywMMf00XSMeyKNmIqp3RaoCvqUs5KHdxJrIRMtVArTwrFQUkQgHOF38pK_6xr6X3fhfwaXQdMWSCNYEmrY-af8zjGAZm_g.webp" />
+                    <div class="user-component__text">
+                        <h4 class="user-component__title">Moongchi</h4>
+                        <h6 class="user-component__subtitle">Please check my Kokoa Account Info</h6>
+                    </div>
+                </div>
+                <div class="user-component__column">
+                    <span class="user-component__time">21:22</span>
+                    <div class="badge">1</div>
                 </div>
             </div>
-            <div class="user-component__column">
-                <span class="user-component__time">21:22</span>
-                <div class="badge">1</div>
-            </div>
-        </div>
+        </a>
     </main>
 
     <nav class="nav">
