--- a/settings.html
+++ b/settings.html
@@ -23,7 +23,7 @@
     </div>
 
     <header class="alt-header">
-        <div class="alt-header__column"><i class="fa-solid fa-angle-left fa-3x"></i></div>
+        <div class="alt-header__column"><a href="more.html"><i class="fa-solid fa-angle-left fa-3x"></i></a></div>
         <div class="alt-header__column"><h1 class="alt-header__title">Settings</h1></div>
         <div class="alt-header__column"><i class="fa-solid fa-magnifying-glass"></i></div>
     </header>
@@ -31,13 +31,22 @@
     <main class="main-screen">
         <ul class="settings-list">
             <li class="settings__setting">
-                <i class="fa-solid fa-bullhorn"></i><span>Notices</span>
+                <div class="settings__setting-column">
+                    <i class="fa-solid fa-bullhorn"></i><span>Notices</span>
+                </div>
+                <div class="settings__setting-column"></div>
             </li>
             <li class="settings__setting">
-                <i class="fa-solid fa-flask"></i><span>Kokoa Lab</span>
+                <div class="settings__setting-column">
+                    <i class="fa-solid fa-flask"></i><span>Kokoa Lab</span>
+                </div>
+                <div class="settings__setting-column"></div>
             </li>
             <li class="settings__setting">
-                <i class="fa-solid fa-circle-info"></i><span>Version</span>
+                <div class="settings__setting-column">
+                    <i class="fa-solid fa-circle-info"></i><span>Version</span>
+                </div>
+                <div class="settings__setting-column">Latest Version</div>
             </li>
         </ul>
     </main>
