Chat Screen part Three

--- a/chat.html
+++ b/chat.html
@@ -24,7 +24,7 @@
 
     <header class="alt-header">
         <div class="alt-header__column"><a href="chats.html"><i class="fa-solid fa-angle-left fa-3x"></i></a></div>
-        <div class="alt-header__column"><h1 class="alt-header__title">King Yool</h1></div>
+        <div class="alt-header__column"><h1 class="alt-header__title">Moongchi</h1></div>
         <div class="alt-header__column">
             <i class="fa-solid fa-magnifying-glass fa-lg"></i>
             <i class="fa-solid fa-bars fa-lg"></i>
@@ -34,6 +34,16 @@
     <main class="main-screen main-chat">
         <div class="chat__timestamp">
             Tuesday, June 30, 2020
+        </div>
+        <div class="message-row">
+            <img src="https://i.namu.wiki/i/3IX1N8BBsg00le6CzsHd3s0Pg7rgrXt-U2BzYSpe4T-gK6Of3SukXJSCywMMf00XSMeyKNmIqp3RaoCvqUs5KHdxJrIRMtVArTwrFQUkQgHOF38pK_6xr6X3fhfwaXQdMWSCNYEmrY-af8zjGAZm_g.webp">
+            <div class="message-row__content">
+                <span class="message__author">Moongchi</span>
+                <div class="message__info">
+                    <span class="message__bubble">Hi!</span>
+                    <span class="message__time">21:27</span>
+                </div>
+            </div>
         </div>
     </main>
     
