Chat Screen part Five

--- a/chat.html
+++ b/chat.html
@@ -45,6 +45,15 @@
                 </div>
             </div>
         </div>
+
+        <div class="message-row message-row--own">
+            <div class="message-row__content">
+                <div class="message__info">
+                    <span class="message__bubble">Hi! Good to see you</span>
+                    <span class="message__time">21:27</span>
+                </div>
+            </div>
+        </div>
     </main>
     
     <script src="https://kit.fontawesome.com/893b5d4369.js" crossorigin="anonymous"></script>
