Write Message Input

--- a/chat.html
+++ b/chat.html
@@ -35,6 +35,7 @@
         <div class="chat__timestamp">
             Tuesday, June 30, 2020
         </div>
+
         <div class="message-row">
             <img src="https://i.namu.wiki/i/3IX1N8BBsg00le6CzsHd3s0Pg7rgrXt-U2BzYSpe4T-gK6Of3SukXJSCywMMf00XSMeyKNmIqp3RaoCvqUs5KHdxJrIRMtVArTwrFQUkQgHOF38pK_6xr6X3fhfwaXQdMWSCNYEmrY-af8zjGAZm_g.webp">
             <div class="message-row__content">
@@ -45,7 +46,6 @@
                 </div>
             </div>
         </div>
-
         <div class="message-row message-row--own">
             <div class="message-row__content">
                 <div class="message__info">
@@ -54,6 +54,19 @@
                 </div>
             </div>
         </div>
+
+        <form class="reply">
+            <div class="reply__column">
+                <i class="fa-regular fa-square-plus fa-lg"></i>
+            </div>
+            <div class="reply__column">
+                <input type="text" placeholder="Write a message..." />
+                <i class="fa-regular fa-face-smile-wink fa-lg"></i>
+                <button>
+                    <i class="fa-solid fa-arrow-up"></i>
+                </button>
+            </div>
+        </form>
     </main>
     
     <script src="https://kit.fontawesome.com/893b5d4369.js" crossorigin="anonymous"></script>
