Splash Screen part One

--- a/friends.html
+++ b/friends.html
@@ -73,6 +73,9 @@
             <li class="nav__btn"><a class="nav__link" href="more.html"><span class="ellipsis__notification small-badge"> </span><i class="fa-solid fa-ellipsis fa-2x"></i></a></li>
         </ul>
     </nav>
+    <div id="splash-screen">
+        <i class="fa-solid fa-comment"></i>
+    </div>
     
     <script src="https://kit.fontawesome.com/893b5d4369.js" crossorigin="anonymous"></script>
 </body>
