No Mobile Media Query

--- a/chats.html
+++ b/chats.html
@@ -36,7 +36,7 @@
         <a href="chat.html">
             <div class="user-component">
                 <div class="user-component__column">
-                    <img class="user-component__avatar" src="https://i.namu.wiki/i/3IX1N8BBsg00le6CzsHd3s0Pg7rgrXt-U2BzYSpe4T-gK6Of3SukXJSCywMMf00XSMeyKNmIqp3RaoCvqUs5KHdxJrIRMtVArTwrFQUkQgHOF38pK_6xr6X3fhfwaXQdMWSCNYEmrY-af8zjGAZm_g.webp" />
+                    <img class="user-component__avatar" src="https://i.namu.wiki/i/6zhIVqY-gsRyCKDU-d9WrnTWHlByDwI6d59CRPbwcFdC2eOPG_kagA0qYQJxaSYqb1yHX4dbrYnUC7uLq43eQg.webp" />
                     <div class="user-component__text">
                         <h4 class="user-component__title">Moongchi</h4>
                         <h6 class="user-component__subtitle">Please check my Kokoa Account Info</h6>
@@ -59,6 +59,10 @@
         </ul>
     </nav>
     
+    <div id="no-mobile">
+        <span>Your screen is too big</span>
+    </div>
+
     <script src="https://kit.fontawesome.com/893b5d4369.js" crossorigin="anonymous"></script>
 </body>
 </html>
