--- a/chat.html
+++ b/chat.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat w/ King Yool - Kokoa Clone</title>
+    <title>Chat w/ Moongchi - Kokoa Clone</title>
 </head>
 <body id="chat-screen">
     <div class="status-bar">
@@ -37,7 +37,7 @@
         </div>
 
         <div class="message-row">
-            <img src="https://i.namu.wiki/i/3IX1N8BBsg00le6CzsHd3s0Pg7rgrXt-U2BzYSpe4T-gK6Of3SukXJSCywMMf00XSMeyKNmIqp3RaoCvqUs5KHdxJrIRMtVArTwrFQUkQgHOF38pK_6xr6X3fhfwaXQdMWSCNYEmrY-af8zjGAZm_g.webp">
+            <img src="https://i.namu.wiki/i/6zhIVqY-gsRyCKDU-d9WrnTWHlByDwI6d59CRPbwcFdC2eOPG_kagA0qYQJxaSYqb1yHX4dbrYnUC7uLq43eQg.webp">
             <div class="message-row__content">
                 <span class="message__author">Moongchi</span>
                 <div class="message__info">
@@ -69,6 +69,9 @@
         </form>
     </main>
     
+    <div id="no-mobile">
+        <span>Your screen is too big</span>
+    </div>
     <script src="https://kit.fontawesome.com/893b5d4369.js" crossorigin="anonymous"></script>
 </body>
 </html>
