--- a/settings.html
+++ b/settings.html
@@ -61,6 +61,10 @@
         </ul>
     </nav>
     
+    <div id="no-mobile">
+        <span>Your screen is too big</span>
+    </div>
+
     <script src="https://kit.fontawesome.com/893b5d4369.js" crossorigin="anonymous"></script>
 </body>
 </html>
