--- a/friends.html
+++ b/friends.html
@@ -76,7 +76,7 @@
 
 
     <div id="no-mobile">
-        <span>Your screen is too big</span>
+        <span>Your screen is super big</span>
     </div>
     
     <script src="https://kit.fontawesome.com/893b5d4369.js" crossorigin="anonymous"></script>
